--- a/client/src/smallcomponents/features.css
+++ b/client/src/smallcomponents/features.css
@@ -66,7 +66,7 @@
 }
 
 .service-32 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Inter", sans-serif;
   color: #8d97ad;
   font-weight: 300;
 }
