--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,80 +1,155 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
+nav {
   position: fixed;
+  z-index: 999;
   width: 100%;
-  height: 100px;
-  z-index: 10;
+  background-color: #001435;
 }
-
-.logo {
-  margin-left: 100px;
-}
-
-.header ul li a:hover,
-.header ul li a.active {
-  font-weight: 500;
-  color: rgb(99, 0, 67);
-  transition: 0.5s;
-}
-
-.header-bg {
-  background-color: rgba(0, 0, 0, 0.85);
-  transition: 0.5s;
-}
-
-.nav-menu {
+nav .wrapper {
+  position: relative;
+  max-width: 1420px;
+  padding: 0px 30px;
+  height: 70px;
+  line-height: 70px;
+  margin: auto;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.nav-menu li {
-  padding: 0 1rem;
+.wrapper .logo a {
+  color: #f2f2f2;
+  font-size: 30px;
+  font-weight: 600;
+  text-decoration: none;
 }
-
-.nav-menu li .no {
-  font-size: 1.2rem;
+.wrapper .nav-links {
+  display: inline-flex;
+}
+.nav-links li {
+  list-style: none;
+}
+.nav-links li a {
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 18px;
   font-weight: 500;
+  padding: 9px 15px;
+  transition: all 0.3s ease;
+  position: relative; /* Add this line to make room for the border-bottom */
+  transition: border-bottom 0.3s ease;
 }
 
-.ham {
+.nav-links li a:not(.moreLinks):hover::before {
+  background-color: #fff701;
+  transition: 0.5s;
+}
+
+.nav-links li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px; /* Adjust the height of the border as needed */
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+}
+
+.nav-links .mobile-item {
   display: none;
 }
+.nav-links .drop-menu {
+  position: absolute;
+  background: #101010;
+  width: 120px;
+  line-height: 45px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  padding: 0 10px !important;
+}
 
-@media screen and (max-width: 980px) {
-  .logo {
-    margin: 50px;
+.content .row header {
+  color: #f2f2f2;
+  font-size: 20px;
+  font-weight: 500;
+}
+.wrapper .btn {
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  display: none;
+}
+.wrapper .btn.close-btn {
+  position: absolute;
+  right: 20px;
+  top: -5px;
+}
+
+@media screen and (max-width: 1070px) {
+  nav .wrapper {
+    padding: 0 15px;
   }
-  .nav-menu {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  .wrapper .btn {
+    display: block;
+  }
+  .wrapper .nav-links {
+    position: fixed;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.9);
-    position: absolute;
+    width: 100%;
+    max-width: 350px;
     top: 0;
     left: -100%;
-    z-index: -3;
-    transition: 0.3s;
+    background: #101010;
+    display: block;
+    padding: 50px 10px;
+    line-height: 50px;
+    overflow-y: auto;
+    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.18);
+    transition: all 0.3s ease;
   }
-
-  .nav-menu.active {
-    left: 0;
+  #menu-btn:checked ~ .nav-links {
+    left: 0%;
   }
-
-  .nav-menu li {
-    padding: 1rem 0;
+  #menu-btn:checked ~ .btn.menu-btn {
+    display: none;
   }
-
-  .nav-menu li a {
-    font-size: 2rem;
+  #close-btn:checked ~ .btn.menu-btn {
+    display: block;
   }
-
-  .ham {
-    display: initial;
-    margin: 50px;
+  .nav-links li {
+    margin: 15px 10px;
+  }
+  .nav-links li a {
+    padding: 0 20px;
+    display: block;
+    font-size: 20px;
+  }
+  .nav-links .desktop-item {
+    display: none;
+  }
+  .nav-links .mobile-item {
+    display: block;
+    color: #f2f2f2;
+    font-size: 20px;
+    font-weight: 500;
+    padding-left: 20px;
     cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s ease;
   }
+  .nav-links .mobile-item:hover {
+    background: #101010;
+  }
+  .content .row header {
+    font-size: 19px;
+  }
+}
+nav input {
+  display: none;
+}
+.register-btn-navbar {
+  background-color: var(--primary_lightColor);
+  border-radius: 5px;
 }
