Added Cors to backend(server) and added .env to frontend(client)

--- a/client/src/styles/hero.css
+++ b/client/src/styles/hero.css
@@ -4,10 +4,10 @@
   padding: 100px 0 125px;
   background-image: linear-gradient(
     to bottom,
-    #ffffff,
-    #f9f5ff,
+    #f3eefe,
     #d5c2ff,
-    #ba9aff,
+    #c5abfd,
+    #af8bfd,
     #9e63ff,
     #8400ff
   );
