--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -27,9 +27,9 @@
 }
 
 .btn-extra-header {
-  color: grey !important;
+  color: blueviolet !important;
   background-color: transparent !important;
-  border: 2px solid grey !important;
+  border: 2px solid blueviolet !important;
 }
 
 .header_wrapper .navbar {
@@ -37,6 +37,7 @@
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
+
 .header_wrapper .navbar-brand img {
   max-width: 210px;
   height: auto;
@@ -52,7 +53,7 @@
 .header_wrapper .nav-item .nav-link {
   font-weight: bold;
   font-size: 18px;
-  color: grey;
+  color: blueviolet;
   line-height: 1;
 }
 .header_wrapper .nav-item .nav-link.active {
@@ -65,18 +66,17 @@
   left: 0;
   width: 100%;
   height: 85px;
+  z-index: 99999;
   background: white !important;
+  transition: 0.7;
   -webkit-box-shadow: 0 4px 6px 0 rgba(12, 0, 46, 0.05);
   box-shadow: 0 4px 6px 0 rgba(12, 0, 46, 0.05);
 }
 .header-scrolled .navbar-brand img {
   width: 190px;
   height: auto;
+  transition: 0.7;
   animation: animated 0.3s ease-in-out;
-}
-
-nav {
-  background-color: white;
 }
 
 @keyframes animated {
@@ -92,6 +92,7 @@ nav {
 }
 .header-scrolled .nav-item .nav-link {
   font-size: 17px;
+  transition: 0.7;
 }
 
 @media (max-width: 1300px) {
@@ -136,7 +137,7 @@ nav {
     padding: 12px 29px !important;
   }
   .header_wrapper .navbar-collapse {
-    background: var(--bg-white);
+    background: white;
   }
 }
 
