Integration with google drive

--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -149,3 +149,12 @@
   border: none;
   box-shadow: none;
 }
+
+#lblCartCount {
+  font-size: 12px;
+  background: blueviolet;
+  color: #fff;
+  padding: 0 5px;
+  vertical-align: top;
+  margin-left: -5px;
+}
