--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,24 @@ h3 {
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #dbcdff;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(
+    to bottom,
+    #ffffff,
+    #dbcdff,
+    #ba9aff,
+    #9e63ff,
+    #8400ff
+  );
+  border-radius: 20px;
 }
 
 .marginStyle {
